2017-06-21  Florian Weimer  <fweimer@redhat.com>

	Add the __inet_pton_length helper function.
	* resolv/resolv-internal.h (__inet_pton_length): Declare.
	* resolv/inet_pton (__inet_pton_length): Rename from __inet_pton.
	Add length argument.
	(__inet_pton): New function.
	(inet_pton4): Add length argument.
	(hex_digit_value): New function.
	(inet_pton6): Add length argument.  Call hex_digit_value.  Use
	memmove and memset to fill :: gap.
	* resolv/Makefile (tests, tsts-static, tests-internal): Add
	tst-inet_pton.
	* resolv/tst-inet_pton.c: New file.
	* support/Makefile (libsupport-routines): Add xmprotect.
	* support/xunistd.h (xmprotect): Declare.
	* support/xmprotect.c: New file.

2017-05-11  Florian Weimer  <fweimer@redhat.com>

	* resolv/inet_pton.c: Reformat in GNU style.  Remove
	internal_function on static functions.

2017-06-03  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Call __strdup instead
	of strdup.

2017-06-02  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gethosts): Eliminate another
	strdupa.
	(getcanonname): Use __strdup instead of strdup.

2017-06-02  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (getcanonname): New function.
	(gaih_inet): Remove malloc_canonbuf variable.  Call getcanonname.

2017-05-11  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gethosts): Remove malloc_addrmem.
	(gaih_inet): Likewise.

2017-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/fpu/libm-test-ulps: Regenerated.

2017-12-30  Aurelien Jarno  <aurelien@aurel32.net>
	    Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22625]
	* elf/dl-load.c (fillin_rpath): Check for empty tokens before dynamic
	string token expansion. Check for NULL pointer or empty string possibly
	returned by expand_dynamic_string_token.
	(decompose_rpath): Check for empty path after dynamic string
	token expansion.

2017-12-18  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22627]